Revision history for Git-Archive

{{$NEXT}}

0.08  2013-12-24 11:29:11 GMT
        - Added optional sudo parameter

0.07  2013-12-23 12:39:35 GMT
        - Accept multiple filenames in a single string, space-separated, after all

0.06  2013-12-23 11:22:15 GMT
        - Handle filenames with spaces in

0.05  2013-12-23 09:35:54 GMT
        - Minor test update

0.04  2013-12-22 14:25:08 GMT
        - Fix possibility of git not being installed

0.03  2013-12-20 10:49:07 GMT
        - Fix missing newline in error msg

0.02  2013-12-20 10:46:44 GMT
        - Fix adding multiple files when calling all_dirty

0.01  2013-12-20 10:19:05 GMT
        - Initial release